# llm-trader-battle

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer.local.json.example
.github/workflows/: close-and-report.yml  daily-aggregate.yml  daily-prices.yml  open.yml  picks.yml  weekly-picks.yml
data/calendar/: manual_closed_dates.json
data/picks/: current.json  picks-2025-12-15.json  picks-2025-12-22.json
data/prices/: prices-2025-12-08.json  prices-2025-12-09.json  prices-2025-12-10.json  prices-2025-12-11.json  prices-2025-12-12.json  prices-2025-12-15.json  prices-2025-12-16.json  prices-2025-12-17.json  prices-2025-12-18.json  prices-2025-12-19.json  prices-2025-12-22.json  prices-2025-12-23.json  prices-2025-12-24.json  prices-2025-12-25.json  prices-2025-12-26.json
data/result/: result-2025-12-08.json  result-2025-12-08.md  result-2025-12-09.json  result-2025-12-09.md  result-2025-12-10.json  result-2025-12-10.md  result-2025-12-11.json  result-2025-12-11.md  result-2025-12-12.json  result-2025-12-12.md  result-2025-12-15.json  result-2025-12-15.md  result-2025-12-16.json  result-2025-12-16.md  result-2025-12-17.json  result-2025-12-17.md  result-2025-12-18.json  result-2025-12-18.md  result-2025-12-19.json  result-2025-12-19.md  result-2025-12-22.json  result-2025-12-22.md  result-2025-12-23.json  result-2025-12-23.md  result-2025-12-24.json  result-2025-12-24.md  result-2025-12-25.json  result-2025-12-25.md  result-2025-12-26.json  result-2025-12-26.md
reports/202512/: summary.md  (+2 more)
(+13 files in other folders)
